--- a/synapsis/src/main/resources/templates/fragments/footer.html
+++ b/synapsis/src/main/resources/templates/fragments/footer.html
@@ -19,7 +19,7 @@
 
     <div class="w-full bg-black-variant relative bottom-0 left-0">
         <div class="container flex flex-row justify-between mt-8">
-            <div class="flex-none mt-4 ml-24 lg:ml-36 xl:ml-56 w-3/6">
+            <div class="flex-none mt-4 ml-24 lg:ml-36 xl:ml-56 w-1/3">
                 <img src="/assets/synapsis_red.svg" class="w-72 mr-10" alt="Synapsis Logo">
                 <div class="langEN flex-none font-light text-white text-sm ml-2">
                     Your space to make connections.
@@ -28,31 +28,31 @@
                     Votre espace pour créer des liens
                 </div>
             </div>
-            <div class="flex-1 container flex-col items-start">
+            <div class="flex-1 container flex-row lg:flex-col items-start">
             </div>
-            <div class="flex-1 container flex-col items-start">
-                <div class="langEN flex-none font-light text-white text-lg mt-4">
+            <div class="flex-1 container flex-row lg:flex-col items-start">
+                <div class="langEN flex-none font-light text-white md:text-sm lg:text-lg mt-4">
                     <a href="/register"> Sign Up </a>
                 </div>
-                <div class="langFR flex-none font-light text-white text-lg mt-4">
+                <div class="langFR flex-none font-light text-white md:text-sm lg:text-lg mt-4">
                     <a href="/register"> Créez votre compte</a>
                 </div>
-                <div class="langEN flex-none font-light text-white text-lg">
+                <div class="langEN flex-none font-light text-white md:text-sm lg:text-lg">
                     <a href="/aboutUs"> About </a>
                 </div>
-                <div class="langFR flex-none font-light text-white text-lg">
+                <div class="langFR flex-none font-light text-white md:text-sm lg:text-lg">
                     <a href="/aboutUs"> À propos </a>
                 </div>
-                <div class="langEN flex-none font-light text-white text-lg">
+                <div class="langEN flex-none font-light text-white md:text-sm lg:text-lg">
                     <a href="/ourServices"> Services </a>
                 </div>
-                <div class="langFR flex-none font-light text-white text-lg">
+                <div class="langFR flex-none font-light text-white md:text-sm lg:text-lg">
                     <a href="/ourServices">Services </a>
                 </div>
-                <div class="langEN flex-none font-light text-white text-lg">
+                <div class="langEN flex-none font-light text-white md:text-sm lg:text-lg">
                     <a href="/contactUs" > Contact </a>
                 </div>
-                <div class="langFR flex-none font-light text-white text-lg">
+                <div class="langFR flex-none font-light text-white md:text-sm lg:text-lg">
                     <a href="/contactUs"> Nous joindre </a>
                 </div>
             </div>
