--- a/synapsis/src/main/resources/templates/pages/savedjobs.html
+++ b/synapsis/src/main/resources/templates/pages/savedjobs.html
@@ -3,6 +3,7 @@
       layout:decorate="_layout">
 <div layout:fragment="content">
 
+  <div class="langEN">
   <div class="w-1/2 mx-auto">
     <div class="mx-auto">
       <p class="text-2xl font-serif font-black-variant font-thin mb-4 text-center">Saved Jobs</p>
@@ -52,5 +53,63 @@
     </div>
 
   </div>
+  </div>
+
+
+
+
+
+  <div class="langFR">
+    <div class="w-1/2 mx-auto">
+      <div class="mx-auto">
+        <p class="text-2xl font-serif font-black-variant font-thin mb-4 text-center">Emplois enregistrés</p>
+
+        <div th:if="${jobs.size() == 0}">
+          <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+            Aucun résultat
+          </div>
+        </div>
+
+        <!-- Displaying all saved jobs -->
+        <div class="grid grid-cols-1 md:grid-cols-3 md:gap-3">
+
+          <div th:if="${jobs.size() > 0}" th:each="job: ${jobs}" class="flex flex-col inline-block rounded-2xl shadow w-56 min-h-min bg-white mt-4 mr-4 pb-4">
+
+            <img class="w-56 h-40" src="../../assets/company_default.jpg">
+            <div class="font-sans text-base font-light mt-2 ml-4" th:text="${job.get().position}"></div>
+            <div class="font-sans text-base font-light mt-2 ml-4" th:text="${job.get().company.getName()}"></div>
+
+            <div class="grow bg-light mx-auto w-11/12 rounded-2xl text-xs mt-2 mb-4">
+              <div class="font-sans font-light p-2" th:text="${job.get().description}"></div>
+              <p class="px-2">Salaire: à déterminer</p>
+              <a th:href="@{/job/{id}(id=${job.get().getID()})}" class="inline-block px-2 py-2 underline">plus de détails</a>
+              <p class="px-2" th:if="${job.get().isExternal}">***APPLIQUER PAR LE SITE WEB***</p>
+            </div>
+
+
+            <div class="flex mt-auto justify-evenly">
+              <div th:if="${jobsSubmitted.contains(job.get())}">
+                <button class="inline-block px-4 py-4 text-white bg-primary-variant rounded-2xl" disabled>Soumise</button>
+              </div>
+
+              <div th:unless="${jobsSubmitted.contains(job.get())}" class="transition hover:-translate-y-0.5 duration-150">
+                <a th:href="@{/jobapplication/{id}(id=${job.get().getID()})}" class="inline-block px-4 py-4 text-white bg-primary rounded-2xl hover:bg-opacity-60 hover:text-white">Appliquer</a>
+              </div>
+
+              <form th:action="@{/deletesavedjob}" method="post">
+                <input type="hidden" name="jobId" th:value="${job.get().getID()}" />
+                <button class="text-white bg-primary mx-auto p-4 rounded-2xl
+                    hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit"><i class="fa-solid fa-bookmark"></i></button>
+              </form>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 </div>
 </html>
