--- a/synapsis/src/main/resources/templates/pages/chatPage.html
+++ b/synapsis/src/main/resources/templates/pages/chatPage.html
@@ -2,16 +2,22 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
     <div layout:fragment="content" class="flex justify-center">
-        <div class="langEN">
+
         <div class="flex flex-row flex-wrap w-4/5 lg:w-9/10 justify-center shadow-lg rounded-lg border-t-2">
             <div class="flex flex-col w-full md:w-1/3 align-center h-[60vh] overflow-x-auto">
-                <div class="font-semibold text-xl lg:text-2xl p-5">
+                <div class="langEN font-semibold text-xl lg:text-2xl p-5">
                     Your Connections
+                </div>
+                <div class="langFR font-semibold text-xl lg:text-2xl p-5">
+                    Vos Connexions
                 </div>
                 <!-- It will be displayed if the user has no chat messages -->
                 <div th:if="${chats.size() == 0}">
-                    <div class="w-4/5 p-4 ml-5 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+                    <div class="langEN w-4/5 p-4 ml-5 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
                         <span class="font-medium"></span> You don't have any chat messages
+                    </div>
+                    <div class="langFR w-4/5 p-4 ml-5 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+                        <span class="font-medium"></span> Vous n'avez aucun message
                     </div>
                 </div>
                 <!-- This will be displayed if they already have some chat messages -->
@@ -21,7 +27,7 @@
                         <img class="w-6 mr-2 rounded-t-2xl" src="/assets/default_user.svg">
                         <div>
                             <p th:text="${chat.creator.id == globalUserId ? chat.participant.name : chat.creator.name}"
-                               class="text-xs lg:text-lg text-ellipsis"></p>
+                               class="text-xs m-2 lg:m-0 lg:text-lg text-ellipsis"></p>
                         </div>
                     </a>
                 </div>
@@ -30,36 +36,6 @@
                 <img class="h-[60vh]" src="/assets/messaging.png">
             </div>
         </div>
-        </div>
 
-        <div class="langFR">
-            <div class="flex flex-row flex-wrap w-4/5 lg:w-9/10 justify-center shadow-lg rounded-lg border-t-2">
-                <div class="flex flex-col w-full md:w-1/3 align-center h-[60vh] overflow-x-auto">
-                    <div class="font-semibold text-xl lg:text-2xl p-5">
-                        Vos Connexions
-                    </div>
-                    <!-- It will be displayed if the user has no chat messages -->
-                    <div th:if="${chats.size() == 0}">
-                        <div class="w-4/5 p-4 ml-5 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
-                            <span class="font-medium"></span> Vous n'avez aucun message
-                        </div>
-                    </div>
-                    <!-- This will be displayed if they already have some chat messages -->
-                    <div th:if="${chats.size() != 0}" th:each="chat: ${chats}"
-                         class="w-4/5 p-2 py-2 lg:p-5 lg:py-5 my-2 ml-5 bg-neutral-100 border-gray-200 rounded-lg shadow">
-                        <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex ml-3">
-                            <img class="w-6 mr-2 rounded-t-2xl" src="/assets/default_user.svg">
-                            <div>
-                                <p th:text="${chat.creator.id == globalUserId ? chat.participant.name : chat.creator.name}"
-                                   class="text-xs lg:text-lg text-ellipsis"></p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="hidden md:flex md:flex-col w-2/3 py-5 border-l-2">
-                    <img class="h-[60vh]" src="/assets/messaging.png">
-                </div>
-            </div>
-        </div>
     </div>
 </html>
