--- a/synapsis/src/main/resources/templates/pages/jobApplicationForm.html
+++ b/synapsis/src/main/resources/templates/pages/jobApplicationForm.html
@@ -33,7 +33,7 @@
 
             <div class="flex flex-col space-y-4 mt-4 md:flex-row md:justify-between md:h-14 md:space-x-4 md:space-y-0">
                 <input name="city" type="text" placeholder="City" class="font-thin font-serif border border-grey pl-3 rounded-md hover:bg-light md:w-1/2 w-full h-14" required />
-                <select name="country" class="country font-thin font-serif border border-grey pl-3 rounded-md hover:bg-light md:w-1/2 w-full h-14" required>
+                <select name="country" class="location font-thin font-serif border border-grey pl-3 rounded-md hover:bg-light md:w-1/2 w-full h-14" required>
                     <option value="" disabled selected>Select a country</option>
                 </select>
             </div>
@@ -129,7 +129,7 @@
 
                 <div class="flex flex-col space-y-4 mt-4 md:flex-row md:justify-between md:h-14 md:space-x-4 md:space-y-0">
                     <input name="city" type="text" placeholder="Ville" class="font-thin font-serif border border-grey pl-3 rounded-md hover:bg-light md:w-1/2 w-full h-14" required />
-                    <select name="country" class="country font-thin font-serif border border-grey pl-3 rounded-md hover:bg-light md:w-1/2 w-full h-14" required>
+                    <select name="country" class="location font-thin font-serif border border-grey pl-3 rounded-md hover:bg-light md:w-1/2 w-full h-14" required>
                         <option value="" disabled selected>Choisissez un pays</option>
                     </select>
                 </div>
